--- a/about-world.html
+++ b/about-world.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="utf-8">
   <title>ABOUT | 世界観について</title>
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="stylesheet" href="css/style.css?v=4">
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <link rel="icon" type="image/png" href="images/ui/logo-circle.png">
   <!-- ★ head-icons.html を読み込む共通スクリプト -->
@@ -18,114 +17,89 @@
 
   <!-- ヘッダー -->
   <div id="header-container"></div>
-  
+
   <div class="bubbles bubbles-body">
     <span></span><span></span><span></span><span></span><span></span>
     <span></span><span></span><span></span><span></span>
   </div>
-  
+
   <main class="l-main l-main--narrow about-page">
 
     <!-- 戻るリンク -->
     <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
 
     <!-- 見出しブロック -->
-<section class="about-intro">
-  <h1>World / どんな世界観なのか</h1>
-  <p>
-    ここでは、「ぎじえプロジェクト」における世界観の考え方を紹介しています。<br>
-    キャラクターたちがどんな空気の中で生き、どんな“世界の見え方”を持っているのかを掴んでもらうためのページです。
-  </p>
-  <p>
-    基本方針として、<strong>ひとつの大きな物語や年表は存在しません。</strong><br>
-    各作品は独立しており、キャラクターの価値観や生き方が“その作品の世界”を形づくる構造になっています。
-  </p>
-</section>
+    <section class="about-intro">
+      <h1>WORLD / どんな世界観なのか</h1>
+      <p>
+        ぎじえプロジェクトの世界は、
+        ひとつの大きな物語や<br>
+        共通の年表によって形づくられているわけではありません。<br>
+        それぞれの作品は、独立した短編として存在しています。
+      </p>
+      <p>
+        キャラクターごとに、見ている世界も、立っている場所も異なります。<br>
+        その違いそのものが、このプロジェクトの世界観を形づくっています。
+      </p>
+    </section>
 
-<section class="section-card about-section">
-  <h2 class="section-card__title">TONE &amp; MOOD</h2>
-  <p>
-    全体のトーンは、<strong>現実に近い日常の中に、わずかな不思議さが滲む世界</strong>です。<br>
-    なんでもできるファンタジーではなく、キャラクターの葛藤や価値観がリアルに響く世界観を大切にしています。
-  </p>
-  <p>
-    舞台となる時代や場所は、<strong>作品ごとに異なります。</strong><br>
-    現代の街、名前のない都市、少し未来の環境など、キャラクターの“生き方”に合わせて舞台が設定されます。
-  </p>
-</section>
+    <section class="section-card about-section">
+      <h2 class="section-card__title">STRUCTURE / 世界の構造</h2>
 
-<section class="section-card about-section">
-  <h2 class="section-card__title">RELATION BETWEEN SERIES</h2>
-  <p>
-    ぎじえプロジェクトには複数のシリーズがありますが、<br>
-    それらは<strong>世界線や時系列を束ねるものではなく、「どんなテーマを扱う作品なのか」を示す分類ラベル</strong>として機能しています。
-    シリーズ同士に公式な関係性や共通の時系列はありません。<br>
-    例外として <strong>0_Occupation / そまりものがたり</strong> は、<br>
-    「同じ人物が、別の職業や選択をしたらどんな生き方になるか」という発想で作品が並びますが、<br>
-    各作品は独立しており、どこから読んでも理解できる構成です。
-  </p>
-  <div class="info-card">
-    全シリーズの詳細は、<br>
-    <a href="about-terms.html">Terms / 用語説明</a> にまとめています。
-  </div>
-</section>
+      <p>
+        ぎじえプロジェクトには、
+        明確に定められた「ひとつの世界線」は存在しません。<br>
+        時代や場所、社会のあり方は、作品ごとに異なっています。
+      </p>
 
-<section class="section-card about-section">
-  <h2 class="section-card__title">META ELEMENTS</h2>
+      <p>
+        世界は固定された背景ではなく、
+        その人がどこに立っているかによって形を変えるものだと考えています。<br>
+        だからこそ、作品ごとに舞台を固定せず、キャラクターの人生を中心に描いています。
+      </p>
+    </section>
 
-  <p>
-    ぎじえプロジェクトには、作品全体に共通して登場するいくつかの「記号」があります。<br>
-    その中でも中心となるのが <strong>アーク（Arc）</strong> です。
-  </p>
+    <section class="section-card about-section">
+      <h2 class="section-card__title">STORIES / 独立した物語</h2>
 
-  <p>
-    アークは、キャラクターを理解するための<strong>二つの視点</strong>を示す記号です。<br>
-    他者からどう見えるかという<strong>外側の性質を示すエクスアーク（ExArc）</strong>と、  
-    本人が心の奥で何を感じ、何を大切にしているかという<strong>内側の価値観を示すコアアーク（CoreArc）</strong>を組み合わせて使います。
-  </p>
+      <p>
+        各キャラクターの物語は、
+        他の作品を知らなくても楽しめるように設計されています。<br>
+        明確な関係性や時系列を強く示していないのも、そのためです。
+      </p>
 
-  <p>
-    この二つを並べることで、<strong>外側の印象と内側の本音の差</strong>まで読み取れるようになります。<br>
-    そのギャップや矛盾は、キャラクターの“生き方の物語”を形づくる重要な手がかりになります。
-  </p>
+      <p>
+        ひとつひとつは完結した物語でありながら、
+        並べて見ることで、別の意味や視点が浮かび上がってくる。<br>
+        そんな構造を目指しています。
+      </p>
+    </section>
 
-  <!-- 例の追加部分 -->
-  <div class="example-card">
-    <p><strong>【アークの例】</strong></p>
+    <section class="section-card about-section">
+      <h2 class="section-card__title">COMMONS / 共通して流れるもの</h2>
 
-    <p>
-      <strong>エクス：🔥ブレイズ（Blaze）</strong><br>
-      外からは、熱い正義感と行動力を持つ人物に見える。
-    </p>
+      <p>
+        世界線や舞台は異なっていても、
+        ぎじえプロジェクトの作品には
+        共通して流れているものがあります。
+      </p>
 
-    <p>
-      <strong>コア：🎭フォグ（Fog）</strong><br>
-      しかし内心では、善悪の境界が曖昧に揺れ続けており、「本当に正しいのか？」という霧のような迷いを抱えている。
-    </p>
+      <p>
+        色という視点、<br>
+        迷いや葛藤、<br>
+        そして「どう生きるか」という問い。
+      </p>
 
-    <p>
-      <strong>→ 外の熱さと内の曇りが共存し、その矛盾そのものがキャラクターの物語を深くしていく。</strong>
-    </p>
-  </div>
-  <!-- 例ここまで -->
+      <p>
+        それらが重なり合い、全体として、ひとつの世界観を形づくっています。
+      </p>
+    </section>
 
-  <div class="info-card">
-    アークの種類については、<br>
-    <a href="about-terms.html">Terms / 用語説明</a> にまとめています。
-  </div>
-</section>
+    <nav class="about-nav">
+      <a href="about-project.html" class="char-back-btn about-nav-btn about-nav-btn--prev">&laquo; PROJECT</a>
 
-<nav class="about-nav">
-  <a href="about-project.html"
-     class="char-back-btn about-nav-btn about-nav-btn--prev">
-    << PROJECT
-  </a>
-
-  <a href="about-creator.html"
-     class="char-back-btn about-nav-btn about-nav-btn--next">
-    CREATOR >>
-  </a>
-</nav>
+      <a href="about-creator.html" class="char-back-btn about-nav-btn about-nav-btn--next">CREATOR &raquo;</a>
+    </nav>
   </main>
 
   <!-- フッター -->
@@ -134,4 +108,5 @@
   <script src="js/loadHeader.js"></script>
   <script src="js/loadFooter.js"></script>
 </body>
+
 </html>
