--- a/about-world.html
+++ b/about-world.html
@@ -33,8 +33,7 @@
       <h1>WORLD / どんな世界観なのか</h1>
       <p>
         ぎじえプロジェクトの世界は、
-        ひとつの大きな物語や<br>
-        共通の年表によって形づくられているわけではありません。<br>
+        ひとつの大きな物語や共通の年表によって形づくられているわけではありません。<br>
         それぞれの作品は、独立した短編として存在しています。
       </p>
       <p>
@@ -100,6 +99,10 @@
 
       <a href="about-creator.html" class="char-back-btn about-nav-btn about-nav-btn--next">CREATOR &raquo;</a>
     </nav>
+
+    <!-- 戻るリンク -->
+    <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
+
   </main>
 
   <!-- フッター -->
