--- a/about-creator.html
+++ b/about-creator.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="utf-8">
   <title>ABOUT | 制作者について</title>
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="stylesheet" href="css/style.css?v=4">
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="icon" type="image/png" href="images/ui/logo-circle.png">
   <script src="js/loadHeadIcons.js"></script>
 </head>
 
 <body class="about-page about-creator-page">
 
-  <!-- ヘッダー -->
   <div id="header-container"></div>
 
   <div class="bubbles bubbles-body">
@@ -24,97 +21,62 @@
   </div>
 
   <main class="l-main l-main--narrow about-page">
-
     <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
 
-<section class="about-intro">
-  <h1>CREATOR / 制作者について</h1>
-  <p>
-    Lure / 擬似餌 🎣 として活動しています。<br>
-    Project LURE は、「色から生まれたキャラクターの生き方や価値観を、音楽とビジュアルを通して描く」ことを目的にしています。
-  </p>
-  <p>
-    このページでは、私がどんな姿勢で創作しているのかをまとめています。
-  </p>
-</section>
+    <section class="about-intro">
+      <h1>CREATOR / 制作者について</h1>
+      <p>
+        Lure / 擬似餌 🎣 として活動しています。<br>
+        このページでは、名前の由来や創作に対する考え方をまとめています。
+      </p>
+    </section>
 
-<section class="section-card about-section">
-  <h2 class="section-card__title">ORIGIN</h2>
-  <p>
-    活動名の「Lure / 擬似餌」は、釣りで使われるルアーに由来します。<br>
-    本物ではなくても、水の中で形を変えながら魅力として機能する存在。  
-    その「変幻自在でいられること」への憧れが根底にあります。
-  </p>
-  <p>
-    英語の <em>lure</em> が持つ「惹きつける」という意味のように、  
-    固定された形に縛られず、表現そのものを通して人の心を動かせる存在でありたい、という願いがあります。
-  </p>
-  <p>
-    漢字名の「瑠曖（るあ）」には、光を帯びながらも輪郭が曖昧な存在として漂い続けたい、  
-    という“曖昧さの自由”を込めています。
-  </p>
-</section>
+    <section class="section-card about-section">
+      <h2 class="section-card__title">PROFILE / プロフィール</h2>
+      <p>
+        名前：Lure / 擬似餌 🎣<br>
+        活動内容：キャラクターデザイン / イラスト / 作曲 / ロゴ・作字
+      </p>
+      <p>
+        色を手がかりにキャラクターを設計し、ビジュアルと言葉と音で提示する制作を続けています。
+      </p>
 
-<section class="section-card about-section">
-  <h2 class="section-card__title">PROFILE</h2>
-  <p>
-    ・名前：Lure / 擬似餌 🎣<br>
-    ・主な活動：キャラクターデザイン / 作曲 / ロゴ・作字<br>
-    ・キーワード：色彩 / 生き方 / コンセプト
-  </p>
-  <p>
-    色を出発点にキャラクターを設計し、  
-    その人物の世界の見え方や心の揺れを<strong>キャラソン</strong>として表現しています。
-  </p>
-</section>
+    </section>
 
-<section class="section-card about-section">
-  <h2 class="section-card__title">WHY I CREATE</h2>
-  <p>
-    私は長い物語ではなく、<strong>ひとりのキャラクターの「生き方」を一曲に閉じ込める</strong>という形式を選びました。<br>
-    その人が何を大切にし、どんな心で世界を見ているのか。  
-    それを音と言葉で描くことで、キャラソンは<strong>人生の縮図</strong>になります。
-  </p>
-  <p>
-    曲を聴くことで、誰かの価値観や痛みを追体験できる。  
-    その瞬間に生まれる“理解”や“共鳴”が、このプロジェクトの最も大切な部分です。
-  </p>
-  <p>
-    小説やテキストは、さらに深く知りたい人のための補助資料であり、  
-    作品の中心はあくまで<strong>キャラソン × ビジュアル</strong>に置いています。
-  </p>
-</section>
+    <section class="section-card about-section">
+      <h2 class="section-card__title">ORIGIN / 名前の由来</h2>
+      <p>
+        「Lure / 擬似餌🎣」という名前は、釣りの擬似餌（ルアー）に由来しています。<br>
+        様々な色や形、用途があり、ひとつの見た目に縛られないこと。その変幻自在さに憧れています。
+      </p>
+      <p>
+        また英語の <em>lure</em> には「魅了する」という意味があります。<br>
+        私の創作物で人々を惹きつけられるように、という願いを込めています。
+      </p>
+    </section>
 
-<section class="section-card about-section">
-  <h2 class="section-card__title">CHARACTER & ME</h2>
-  <p>
-    その人の外側に見えている性質（エクスアーク）と、内側に秘めている価値観（コアアーク）。  
-    その二層構造を掘り下げることで、キャラの世界の見え方が立ち上がり、  
-    そこに音楽としての物語が生まれます。
-  </p>
-  <p>
-    私はただ、その揺れや痛みや希望を掬い上げ、形にする役目を担っています。
-  </p>
-</section>
+    <section class="section-card about-section">
+      <h2 class="section-card__title">STANCE / 創作方針</h2>
+      <p>
+        私がこのプロジェクトで重視しているのは、「キャラクターの原案を作ること」です。<br>
+        価値観・悩み・生き方まで含めて設計し、その人物がどんな世界を見ているのかを作品として提示したいと考えています。
+      </p>
 
-<section class="section-card about-section">
-  <h2 class="section-card__title">PERSONAL THEME</h2>
-  <p>
-    ぎじえプロジェクトは、私自身の感情や不安、葛藤を安全に外へ出すための装置でもあります。<br>
-    直接言葉にしづらい気持ちを、キャラクターや音楽というフィルターを通して変換し、整理する場所です。
-  </p>
-  <p>
-    誰かが自分の痛みに名前をつけられなかったとき、  
-    この作品がそっと寄り添う存在になれたら嬉しいと思っています。
-  </p>
-</section>
+      <p>
+        ぎじえプロジェクトでは、イラスト・テキスト（あらすじ/詩）・音楽など、
+        複数のメディアを使ってキャラクターを提示しています。<br>
+        ただし、すべてを理解してもらうことは前提にしていません。
+      </p>
+      <p>
+        ひとつの作品を点として楽しむことも、いくつかを並べて線として見ることもできる。<br>
+        その自由度を残したまま、作品として成立する形を積み重ねていきます。
+      </p>
+    </section>
 
-<nav class="about-nav">
-  <a href="about-world.html"
-     class="char-back-btn about-nav-btn about-nav-btn--prev">
-    << WORLD
-  </a>
-</nav>
+    <nav class="about-nav">
+      <a href="about-world.html" class="char-back-btn about-nav-btn about-nav-btn--prev">&laquo; WORLD</a>
+    </nav>
+    <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
 
   </main>
 
@@ -123,4 +85,5 @@
   <script src="js/loadHeader.js"></script>
   <script src="js/loadFooter.js"></script>
 </body>
+
 </html>
