--- a/about-terms.html
+++ b/about-terms.html
@@ -126,6 +126,9 @@
       </div>
     </section>
 
+    <!-- 戻るリンク -->
+    <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
+
   </main>
 
   <!-- フッター -->
