--- a/about-terms.html
+++ b/about-terms.html
@@ -38,7 +38,11 @@
 
     <!-- キャラクター構造（メインカラー・テーマ・コード・タイトル） -->
     <section class="section-card about-section">
-      <h2 class="section-card__title">CHARACTER / キャラクターの構造</h2>
+      <h2 class="section-card__title">
+        <span class="about-sec-en">CHARACTER</span>
+        <span class="about-sec-sep"> / </span>
+        <span class="about-sec-ja">キャラクターの構造</span>
+      </h2>
 
       <p>
         ぎじえプロジェクトのキャラクターは、<br>
@@ -67,7 +71,11 @@
 
     <!-- 代表的な用語：アーク -->
     <section class="section-card about-section">
-      <h2 class="section-card__title">ARC / アーク</h2>
+      <h2 class="section-card__title">
+        <span class="about-sec-en">ARC</span>
+        <span class="about-sec-sep"> / </span>
+        <span class="about-sec-ja">アーク</span>
+      </h2>
 
       <p>
         アーク（Arc）は、キャラクターの<strong>外に見える姿</strong>と<strong>内に抱えているもの</strong>を整理するための<strong>属性</strong>です。<br>
@@ -114,7 +122,11 @@
 
     <!-- シリーズ名・総称（series.jsonから自動生成） -->
     <section class="section-card about-section">
-      <h2 class="section-card__title">SERIES / シリーズと総称</h2>
+      <h2 class="section-card__title">
+        <span class="about-sec-en">SERIES</span>
+        <span class="about-sec-sep"> / </span>
+        <span class="about-sec-ja">シリーズと総称</span>
+      </h2>
       <p>
         キャラクターたちは10個のシリーズに分類されます。<br>
         テーマの種類によって属するシリーズがかわります。
