--- a/about-creator.html
+++ b/about-creator.html
@@ -32,7 +32,11 @@
     </section>
 
     <section class="section-card about-section">
-      <h2 class="section-card__title">PROFILE / プロフィール</h2>
+      <h2 class="section-card__title">
+        <span class="about-sec-en">PROFILE</span>
+        <span class="about-sec-sep"> / </span>
+        <span class="about-sec-ja">プロフィール</span>
+      </h2>
       <p>
         名前：Lure / 擬似餌 🎣<br>
         活動内容：キャラクターデザイン / イラスト / 作曲 / ロゴ・作字
@@ -44,7 +48,12 @@
     </section>
 
     <section class="section-card about-section">
-      <h2 class="section-card__title">ORIGIN / 名前の由来</h2>
+      
+      <h2 class="section-card__title">
+        <span class="about-sec-en">ORIGIN</span>
+        <span class="about-sec-sep"> / </span>
+        <span class="about-sec-ja">名前の由来</span>
+      </h2>
       <p>
         「Lure / 擬似餌🎣」という名前は、釣りの擬似餌（ルアー）に由来しています。<br>
         様々な色や形、用途があり、ひとつの見た目に縛られないこと。その変幻自在さに憧れています。
@@ -56,7 +65,11 @@
     </section>
 
     <section class="section-card about-section">
-      <h2 class="section-card__title">STANCE / 創作方針</h2>
+      <h2 class="section-card__title">
+        <span class="about-sec-en">CONCEPT</span>
+        <span class="about-sec-sep"> / </span>
+        <span class="about-sec-ja">コンセプト</span>
+      </h2>
       <p>
         私がこのプロジェクトで重視しているのは、「キャラクターの原案を作ること」です。<br>
         価値観・悩み・生き方まで含めて設計し、その人物がどんな世界を見ているのかを作品として提示したいと考えています。
